# ServiceNowAnywhereClient

./: .env  .env.example  .gitignore  README.md  bun.lockb  copy-assets.js  package-lock.json  package.json  tsconfig.json
src/: DataService.js  DataSource.js  EventEmitter.ts  EventTypes.ts  LogStyles.ts  app-controller.js  app-model.js  app-view.js  bundle.js  dataService.js  index.html  index.js  login.js  main.js  online-status.js  workspace.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: date_util.rs  main.rs
src/components/: Avatar.js  ListView.js  RecordView.js  app-content.js  app-list.js  app-nav.js  online-status.js  router.js  sideBar.js  table-content.js
src/datasource/: NowDataSource.js  mockDataSource.js
src/styles/: global-styles.css  login.css  workspace.css
tests/: router.test.js
