[package]
name = "ServiceNowAnywhere"
version = "0.0.0"
description = "ServiceNowAnywhere"
authors = ["Marc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = {  version = "2.0",    features = [
        'macos-private-api',
        'tray-icon',
        'image-ico',
        'image-png'] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
chrono = "0.4"
tauri-plugin-decorum = "1.1.0"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"
